load flower image in plane geometry

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 <h2>Three js Examples</h2>
 <ul>
-	<li><a href="plane-rotate/plane-rotate.html">Plane Rotate</a></li>
+	<li><a href="js/plane-rotate/plane-rotate.html">Plane Rotate</a></li>
+	<li><a href="js/flower/3d-flower.html">3D Flower</a></li>
+    <li><a href="js/box/box.html">Box</a></li>
 </ul>
 
 <script type="text/javascript" src="libs/three.js"></script>
