added left right mouse movement

--- a/js/flower/3d-flower.html
+++ b/js/flower/3d-flower.html
@@ -16,6 +16,7 @@
 		</div>
 		<script type="text/javascript" src="../../libs/jquery-1.9.0.js"></script>
 		<script type="text/javascript" src="../../libs/three.js"></script>
+		<script type="text/javascript" src="../../libs/orbit-controls.js"></script>
 		<script type="text/javascript" src="../../libs/dat.gui.js"></script>
 		<script type="text/javascript" src="3d-flower.js"></script>
 	</body>
