batman logo 3d example

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<li><a href="js/plane-rotate/plane-rotate.html">Plane Rotate</a></li>
 	<li><a href="js/flower/3d-flower.html">3D Flower</a></li>
     <li><a href="js/box/box.html">Box</a></li>
+    <li><a href="js/batman/batman.html">Batman Logo 3D</a></li>
 </ul>
 
 <script type="text/javascript" src="libs/three.js"></script>
