--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <h2>Three js Examples</h2>
 <ul>
 	<li><a href="js/plane-rotate/plane-rotate.html">Plane Rotate</a></li>
-	<li><a href="js/flower/3d-flower.html">3D Flower</a></li>
+	<li><a href="js/flower/flower-image.html">Flower Image</a></li>
+    <li><a href="js/flower/3d-flower.html">3D Flower</a></li>
     <li><a href="js/box/box.html">Box</a></li>
     <li><a href="js/batman/batman.html">Batman Logo 3D</a></li>
 </ul>
