--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <li><a href="js/flower/3d-flower.html">3D Flower</a></li>
     <li><a href="js/box/box.html">Box</a></li>
     <li><a href="js/batman/batman.html">Batman Logo 3D</a></li>
+    <li><a href="js/collada-image/collada-image.html">Collada Image</a></li>
 </ul>
 
 <script type="text/javascript" src="libs/three.js"></script>
