--- a/js/batman/batman.html
+++ b/js/batman/batman.html
@@ -25,8 +25,8 @@
 
 		<script type="text/javascript" src="../../libs/jquery-1.9.0.js"></script>
 		<script type="text/javascript" src="../../libs/three.js"></script>
+		<script type="text/javascript" src="../../libs/OrbitControls.js"></script>
 		<script type="text/javascript" src="../../libs/d3-threeD.js"></script>
-		<script type="text/javascript" src="../../libs/dat.gui.js"></script>
 		<script type="text/javascript" src="batman.js"></script>
 	</body>
 </html>
