--- a/js/collada-image/collada-image.html
+++ b/js/collada-image/collada-image.html
@@ -17,9 +17,11 @@
 		<script type="text/javascript" src="../../libs/jquery-1.9.0.js"></script>
 		<script type="text/javascript" src="../../libs/three.js"></script>
 		<script type="text/javascript" src="../../libs/ColladaLoader.js"></script>
-		<script type="text/javascript" src="../../libs/orbit-controls.js"></script>
+		<script type="text/javascript" src="../../libs/OrbitControls.js"></script>
 		<script type="text/javascript" src="../../libs/d3-threeD.js"></script>
 		<script type="text/javascript" src="../../libs/dat.gui.js"></script>
+		<script type="text/javascript" src="../../libs/Projector.js"></script>
+		<script type="text/javascript" src="../../libs/CanvasRenderer.js"></script>
 		<script type="text/javascript" src="collada-image.js"></script>
 	</body>
 </html>
