moving object with finger drag left right

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <li><a href="js/flower/3d-flower.html">3D Flower</a></li>
     <li><a href="js/box/box.html">Box</a></li>
     <li><a href="js/batman/batman.html">Batman Logo 3D</a></li>
+    <li><a href="js/batman/batman-drag.html">Batman Drag</a></li>
     <li><a href="js/collada-image/collada-image.html">Collada Image</a></li>
+    <li><a href="js/cube/cube.html">Cube</a></li>
 </ul>
 
 <script type="text/javascript" src="libs/three.js"></script>
