tweenjs added for animation

--- a/js/batman/batman-drag.html
+++ b/js/batman/batman-drag.html
@@ -28,6 +28,8 @@
 		<script type="text/javascript" src="../../libs/Projector.js"></script>
 		<script type="text/javascript" src="../../libs/CanvasRenderer.js"></script>
 		<script type="text/javascript" src="../../libs/d3-threeD.js"></script>
+		<script type="text/javascript" src="../../libs/dat.gui.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenLite.min.js"></script>
 		<script type="text/javascript" src="batman-drag.js"></script>
 	</body>
 </html>
